# cmtechmap-workspace

./: .env  .env.example  .env.oci.example  .gitignore  docker-compose.oci-micro.yml  docker-compose.oci.yml  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.yml  init-process.md  maps-research-transcript.md  oracle-description.md
cm-techmap-backend/: Dockerfile  alembic.ini  pyproject.toml
cm-techmap-backend/alembic/: env.py
cm-techmap-backend/alembic/versions/: 001_initial_schema.py  002_add_uploads_and_audit_logs.py  003_add_notifications.py  004_report_config_presets.py
cm-techmap-backend/app/: __init__.py  celery_app.py  config.py  dependencies.py  main.py
cm-techmap-backend/app/api/v1/: admin.py  assets.py  auth.py  dashboard.py  discrepancies.py  flights.py  health.py  integration.py  iptu_rules.py  models.py  notifications.py  projects.py  public_data.py  public_map.py  reports.py  router.py  subscriptions.py  tiles.py  uploads.py  urban_analytics.py  users.py  websocket.py
cm-techmap-backend/app/core/: building_extractor.py  cog_converter.py  database.py  dsm_generator.py  dsm_normalizer.py  model_converter.py  odm_client.py  pubsub.py  security.py  splat_converter.py  storage.py  tenant.py  terrain_extractor.py
cm-techmap-backend/app/middleware/: metrics.py  rate_limit.py  request_logging.py  subscription_enforcement.py  tenant.py
cm-techmap-backend/app/models/: __init__.py  ai_detection.py  analysis_run.py  base.py  discrepancy.py  flight.py  flight_asset.py  iptu_rule.py  parcel.py  processing_job.py  project.py  report.py  report_config_preset.py  subscription.py  tenant.py
cm-techmap-backend/app/schemas/: __init__.py  auth.py  common.py  flight.py  notification.py  processing.py  project.py  public_data.py  report.py  subscription.py  tenant.py  upload.py  user_management.py
cm-techmap-backend/app/services/: audit_log.py  dengue_detection.py  disaster_prevention.py  groq_inference.py  groq_rate_control.py  iptu_malha_fina.py  keycloak_admin.py  notification_service.py  pool_detection.py  public_data.py  report_generator.py  temporal_comparison.py  tenant_lifecycle.py  tenant_quota.py
cm-techmap-backend/app/tasks/: __init__.py  maintenance.py  post_processing.py  processing.py  report_tasks.py
cm-techmap-backend/app/templates/reports/: project_report.html
cm-techmap-backend/migrations/: 001_fiscal_virtual.sql  002_ai_measurements.sql  003_report_config_presets.sql
cm-techmap-backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_auth.py  test_config.py  test_groq_inference.py  test_groq_rate_control.py  test_health.py  test_rate_limit.py  test_report_profiles.py  test_reports_api_presets.py  test_tenant_lifecycle.py  test_upload_schema_compat.py
cm-techmap-docs/: index.html  style.css
documentos-informativos/: cm-solucoes-projeto.md  (+3 more)
(+70 files in other folders)
